[gd_scene load_steps=10 format=3 uid="uid://cgwx45h3aklgk"]

[ext_resource type="Script" uid="uid://cif6u3djwhyj0" path="res://level_select_menu.gd" id="1_isecu"]
[ext_resource type="Texture2D" uid="uid://b5e1yh1nj237q" path="res://textures/levelSelectBackground.png" id="1_m4235"]
[ext_resource type="Texture2D" uid="uid://brt4v35hw7au3" path="res://textures/level1.png" id="2_wyt36"]
[ext_resource type="Texture2D" uid="uid://b8le6yovoxd8d" path="res://textures/arrow.png" id="3_cxc3u"]
[ext_resource type="Script" uid="uid://onay3yiqlmru" path="res://scrpits/level1_node.gd" id="4_jq82j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jq82j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5wmf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxc3u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_isecu"]

[node name="levelSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isecu")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_m4235")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 20.0
offset_right = 102.0
offset_bottom = 147.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="levelNode2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="level2" type="TextureRect" parent="levelNode2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -310.5
offset_right = 185.5
offset_bottom = 388.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wyt36")
expand_mode = 1
flip_h = true

[node name="levelButton2" type="Button" parent="levelNode2"]
layout_mode = 0
offset_left = -166.0
offset_top = -292.0
offset_right = 205.0
offset_bottom = 410.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_jq82j")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5wmf4")
flat = true

[node name="levelNode" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_jq82j")

[node name="level1" type="TextureRect" parent="levelNode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.5
offset_top = -312.5
offset_right = 185.5
offset_bottom = 386.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wyt36")
expand_mode = 1

[node name="levelButton" type="Button" parent="levelNode"]
layout_mode = 0
offset_left = -166.0
offset_top = -292.0
offset_right = 205.0
offset_bottom = 410.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_jq82j")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5wmf4")
flat = true

[node name="arrow2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -63.0
offset_right = 6.0
offset_bottom = 76.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_cxc3u")
expand_mode = 1

[node name="arrow" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -69.5
offset_right = 127.0
offset_bottom = 69.5
grow_vertical = 2
texture = ExtResource("3_cxc3u")
expand_mode = 1
flip_h = true

[node name="rightButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -60.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxc3u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_isecu")
flat = true

[node name="leftButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -65.0
offset_right = 100.0
offset_bottom = 65.0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxc3u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_isecu")
flat = true

[node name="backButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back"

[connection signal="button_down" from="levelNode/levelButton" to="levelNode" method="_on_level_button_button_down"]
[connection signal="button_down" from="rightButton" to="." method="_on_right_button_button_down"]
[connection signal="button_down" from="leftButton" to="." method="_on_left_button_button_down"]
[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
